2011-08-05  Corinna Vinschen  <corinna@vinschen.de>

	* peflags.c: Include sys/mman.h on Cygwin and msys.  Drop conditional
	definitions of uint16_t and uint32_t.  Use WORD rather than uint16_t
	throughout, size_t rather than uint32_t.
	(IMAGE_DLLCHARACTERISTICS_DYNAMIC_BASE): Define if non-existant to
	workaround broken w32api.  Fix usage of broken definition throughout.
	(IMAGE_DLLCHARACTERISTICS_NX_COMPAT): Ditto.
	(IMAGE_DLLCHARACTERISTICS_FORCE_INTEGRITY): Ditto.
	(pe_get16): Remove.
	(pe_get32): Remove.
	(pe_set16): Remove.
	(mmap): Define in terms of Win32 calls for non-Cygwin systems.
	(munmap): Ditto.
	(pe_file): New type to keep file mapping info.
	(pe_open): New function to mmap PE/COFF files.
	(pe_close): New function to unmap PE/COFF files.
	(get_characteristics): Use pe_opem/pe_close and direct Windows
	file structure access.
	(set_coff_characteristics): Ditto.
	(set_pe_characteristics): Ditto.

2011-08-05  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	* NEWS: Update documentation.
	* README: Ditto.
	* ChangeLog: Fix some typos.

2011-08-05  Corinna Vinschen  <corinna@vinschen.de>

	* rebase-db.h (PRIu64, PRIx64): Define for msys, otherwise include
	inttypes.h.
	* rebase-dump.c (load_image_info): Use PRI{u,x}64 in printf statement
	to avoid compiler warnings.
	* rebase.c (PRIx64): Remove definition here.

2011-08-03  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	Add rebase-dump application.

	* Makefile.in: Add rules to build, but not install,
	rebase-dump.exe.
	* rebase-db.h: Declare new dump_rebasedb* functions.
	* rebase-db.c (dump_rebasedb_header): New function.
	(dump_rebasedb_entry): New function.
	(dump_rebasedb): New function.
	* rebase-dump.c: New file.

2011-07-29  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	Improve MinGW/MSYS support.

	* build-aux/config.guess: Add msys support.
	* build-aux/config.sub: Add msys support.
	* configure.ac: Specify -static-* and -D overrides, on a
	platform-sensitive basis, here rather than hardcoding in